[package]
name    = "v8vm"
version = "0.0.1"
edition = "2021"

description = "embedded v8"
license     = "Apache-2.0"

[features]
default = ["tokio"]

[dependencies]
anyhow     = "1.0.62"
http       = "0.2.8"
serde_json = "1.0.85"
serde_v8   = "0.60.0"
tracing    = "0.1.36"
v8         = "0.49.0"

[dependencies.crossbeam-channel]
version  = "0.5.6"

[dependencies.tokio]
version  = "1.20.1"
features = ["sync"]
optional = true
default-features = false

[dev-dependencies]
serde_yaml = "0.9.10"

[dev-dependencies.reqwest]
version  = "0.11.11"
features = ["rustls-tls"]
default-features = false

[dev-dependencies.serde]
version  = "1.0.144"
features = ["derive"]

[dev-dependencies.tokio]
version  = "1.20.1"
features = ["full"]

[dev-dependencies.tracing-subscriber]
version  = "0.3.15"
features = ["env-filter", "tracing-log"]
